Patch 1.3.3:
- Bug fixes
- Minor QoL