@@ -1,3 +1,4 @@
-Patch 1.3.3:
+Patch 1.3.4:
 - Bug fixes
-- Minor QoL
+- Added var, globalvar, and teamvar placeholder shortcuts
+- Changed default safemode setting to false as Hypixel has now officially allowed tools for importing actions
